compilers Lab/lab 2/evaluation_folder_assign2_publish/Testcases/pass/pass1.java
#define A() (1)
#define B() (2)
#define C() (3)
class pass1
{
	public static void main(String[] args)
	{
		System.out.println(new getVal().get(2));
	}
}

class getVal
{
	public int get(int b)
	{
		
		int c;
		int d;
		d=B();
		c=d & b;
		return  c;
		
	}
}
