compilers Lab/lab 2/evaluation_folder_assign2_publish/Testcases/fail/fail1.java
class 
{
	public static void main(String[] args)
	{
		int a=6,b=8,c;
		c=(1*b+(a-b+a));
	}
}
